--- a/NLP CW2 Q6.ipynb
+++ b/NLP CW2 Q6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -30,7 +30,9 @@
       "          (PP\n",
       "            (Preposition from)\n",
       "            (NP (Proper_Noun Phoenix)))))))) (p=2.19769e-08)\n",
-      "parsing all trees with InsideChart parser...\n",
+      "\n",
+      "And now parsing all trees with InsideChart parser...\n",
+      "Tree number 1:\n",
       "(S\n",
       "  (IVP\n",
       "    (IVerb show)\n",
@@ -45,6 +47,7 @@
       "          (PP\n",
       "            (Preposition from)\n",
       "            (NP (Proper_Noun Phoenix)))))))) (p=2.19769e-08)\n",
+      "Tree number 2:\n",
       "(S\n",
       "  (IVP\n",
       "    (IVerb show)\n",
@@ -57,6 +60,7 @@
       "          (Preposition on)\n",
       "          (NP (Det the) (Nominal (Noun flight))))))\n",
       "    (PP (Preposition from) (NP (Proper_Noun Phoenix))))) (p=2.19769e-08)\n",
+      "Tree number 3:\n",
       "(S\n",
       "  (IVP\n",
       "    (IVerb show)\n",
@@ -67,113 +71,7 @@
       "        (Preposition on)\n",
       "        (NP (Det the) (Nominal (Noun flight)))))\n",
       "    (PP (Preposition from) (NP (Proper_Noun Phoenix))))) (p=1.35593e-08)\n",
-      "(S\n",
-      "  (IVP\n",
-      "    (IVerb show)\n",
-      "    (NP (Pronoun me))\n",
-      "    (NP (Det the) (Nominal (Noun meals)))\n",
-      "    (PP\n",
-      "      (Preposition on)\n",
-      "      (NP\n",
-      "        (NP (Det the) (Nominal (Noun flight)))\n",
-      "        (PP (Preposition from) (NP (Proper_Noun Phoenix))))))) (p=1.35593e-08)\n",
-      "(S\n",
-      "  (IVP\n",
-      "    (IVerb show)\n",
-      "    (NP (Pronoun me))\n",
-      "    (NP\n",
-      "      (Det the)\n",
-      "      (Nominal\n",
-      "        (Nominal\n",
-      "          (Nominal (Noun meals))\n",
-      "          (PP\n",
-      "            (Preposition on)\n",
-      "            (NP (Det the) (Nominal (Noun flight)))))\n",
-      "        (PP (Preposition from) (NP (Proper_Noun Phoenix))))))) (p=1.27615e-08)\n",
-      "(S\n",
-      "  (IVP\n",
-      "    (IVerb show)\n",
-      "    (NP (Pronoun me))\n",
-      "    (NP\n",
-      "      (Det the)\n",
-      "      (Nominal\n",
-      "        (Nominal (Noun meals))\n",
-      "        (PP\n",
-      "          (Preposition on)\n",
-      "          (NP\n",
-      "            (Det the)\n",
-      "            (Nominal\n",
-      "              (Nominal (Noun flight))\n",
-      "              (PP\n",
-      "                (Preposition from)\n",
-      "                (NP (Proper_Noun Phoenix)))))))))) (p=1.27615e-08)\n",
-      "(S\n",
-      "  (IVP\n",
-      "    (IVerb show)\n",
-      "    (NP (Pronoun me))\n",
-      "    (NP\n",
-      "      (Det the)\n",
-      "      (Nominal\n",
-      "        (Nominal (Noun meals))\n",
-      "        (PP\n",
-      "          (Preposition on)\n",
-      "          (NP\n",
-      "            (NP (Det the) (Nominal (Noun flight)))\n",
-      "            (PP\n",
-      "              (Preposition from)\n",
-      "              (NP (Proper_Noun Phoenix))))))))) (p=7.8736e-09)\n",
-      "(S\n",
-      "  (IVP\n",
-      "    (IVerb show)\n",
-      "    (NP (Pronoun me))\n",
-      "    (NP\n",
-      "      (NP (Det the) (Nominal (Noun meals)))\n",
-      "      (PP\n",
-      "        (Preposition on)\n",
-      "        (NP\n",
-      "          (Det the)\n",
-      "          (Nominal\n",
-      "            (Nominal (Noun flight))\n",
-      "            (PP\n",
-      "              (Preposition from)\n",
-      "              (NP (Proper_Noun Phoenix))))))))) (p=7.8736e-09)\n",
-      "(S\n",
-      "  (IVP\n",
-      "    (IVerb show)\n",
-      "    (NP (Pronoun me))\n",
-      "    (NP\n",
-      "      (NP\n",
-      "        (Det the)\n",
-      "        (Nominal\n",
-      "          (Nominal (Noun meals))\n",
-      "          (PP\n",
-      "            (Preposition on)\n",
-      "            (NP (Det the) (Nominal (Noun flight))))))\n",
-      "      (PP (Preposition from) (NP (Proper_Noun Phoenix)))))) (p=7.8736e-09)\n",
-      "(S\n",
-      "  (IVP\n",
-      "    (IVerb show)\n",
-      "    (NP (Pronoun me))\n",
-      "    (NP\n",
-      "      (NP\n",
-      "        (NP (Det the) (Nominal (Noun meals)))\n",
-      "        (PP\n",
-      "          (Preposition on)\n",
-      "          (NP (Det the) (Nominal (Noun flight)))))\n",
-      "      (PP (Preposition from) (NP (Proper_Noun Phoenix)))))) (p=4.85785e-09)\n",
-      "(S\n",
-      "  (IVP\n",
-      "    (IVerb show)\n",
-      "    (NP (Pronoun me))\n",
-      "    (NP\n",
-      "      (NP (Det the) (Nominal (Noun meals)))\n",
-      "      (PP\n",
-      "        (Preposition on)\n",
-      "        (NP\n",
-      "          (NP (Det the) (Nominal (Noun flight)))\n",
-      "          (PP\n",
-      "            (Preposition from)\n",
-      "            (NP (Proper_Noun Phoenix)))))))) (p=4.85785e-09)\n"
+      "Tree number 4:\n"
      ]
     }
    ],
@@ -215,12 +113,15 @@
     "for tree in viterbi_parser.parse(sent):\n",
     "    print(tree)\n",
     "\n",
-    "    \n",
-    "print(\"parsing all trees with InsideChart parser...\")\n",
+    "\n",
+    "print(\"\")    \n",
+    "print(\"And now parsing all trees with InsideChart parser...\")\n",
     "inside_parser = nltk.InsideChartParser(grammar)\n",
     "# viterbi_parser.trace(3)\n",
-    "i = 0\n",
+    "\n",
+    "i = 1\n",
     "for tree in inside_parser.parse(sent):\n",
+    "    print('Tree number ' + str(i) + \":\")    \n",
     "    print(tree)\n",
     "    TreeView(tree)._cframe.print_to_file('parse' + str(i) + '.ps')\n",
     "    i += 1"
@@ -228,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
