--- a/NLP CW2 Q6.ipynb
+++ b/NLP CW2 Q6.ipynb
@@ -59,7 +59,6 @@
     "#We enrich our dataframe with additional fields for probabilities and counters\n",
     "rules_count = dict(Counter(gram_rules))\n",
     "rules_df = pd.DataFrame(list(rules_count.items()), columns=['rule','count'])\n",
-    "rules_df = pd.DataFrame(list(rules_count.items()), columns=['rule','count'])\n",
     "rules_df['rule_str'] = rules_df.apply(lambda row: str(row['rule']), axis=1)\n",
     "rules_df['lhs'] = rules_df.apply(lambda row: row['rule'].lhs(), axis=1)\n",
     "rules_df['rhs'] = rules_df.apply(lambda row: row['rule'].rhs(), axis=1)\n",
@@ -72,7 +71,7 @@
     "grammar = \"\\n\".join([str(r) for r in rules_list])\n",
     "grammar = nltk.CFG.fromstring(grammar)\n",
     "\n",
-    "#Generate the dictionary for each tree's calculation\n",
+    "#Generate the dictionary to be used to calculate each tree's probability.\n",
     "rules_prob = dict(zip(rules_df['rule'], rules_df['prob']))"
    ]
   },
@@ -299,7 +298,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most likely tree probability 2.1976892009803398e-08\n",
+      "(S\n",
+      "  (IVP\n",
+      "    (IVerb show)\n",
+      "    (NP (Pronoun me))\n",
+      "    (NP\n",
+      "      (Det the)\n",
+      "      (Nominal\n",
+      "        (Nominal (Noun meals))\n",
+      "        (PP (Preposition on) (NP (Det the) (Nominal (Noun flight))))))\n",
+      "    (PP (Preposition from) (NP (Proper_Noun Phoenix)))))\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Most likely parse (highest probability)\n",
+    "tree_prob = 0\n",
+    "for tree in parser.parse(sent):\n",
+    "    #Calculate the probability\n",
+    "    prob = 1\n",
+    "    for p in tree.productions():\n",
+    "        prob *= rules_prob[p]\n",
+    "    if prob > tree_prob:\n",
+    "        tree_prob = prob\n",
+    "        likely_tree = tree\n",
+    "print(\"Most likely tree probability \" + str(tree_prob))        \n",
+    "print(likely_tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "#Save PCFG into a text file\n",
+    "manual_pcfg = []\n",
+    "for key in rules_prob.keys():\n",
+    "    manual_pcfg.append(str(key) + ' [' + str(rules_prob[key]) + ']')\n",
+    "manual_pcfg = \"\\n\".join([r for r in manual_pcfg])\n",
+    "\n",
+    "pcfg_file = open(\"pcfg_manual.txt\", \"w\")\n",
+    "pcfg_file.write(manual_pcfg)\n",
+    "pcfg_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -308,24 +364,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Let's build us some PCFG\n",
-      "Using the Viterbi parser to most likely parse for our ambiguous sentence\n",
-      "(S\n",
-      "  (IVP\n",
-      "    (IVerb show)\n",
-      "    (NP (Pronoun me))\n",
-      "    (NP (Det the) (Nominal (Noun meals)))\n",
-      "    (PP\n",
-      "      (Preposition on)\n",
-      "      (NP\n",
-      "        (Det the)\n",
-      "        (Nominal\n",
-      "          (Nominal (Noun flight))\n",
-      "          (PP\n",
-      "            (Preposition from)\n",
-      "            (NP (Proper_Noun Phoenix)))))))) (p=2.19769e-08)\n",
-      "\n",
-      "And now parsing all trees with InsideChart parser...\n",
       "Tree number 1:\n",
       "(S\n",
       "  (IVP\n",
@@ -487,39 +525,51 @@
     "#In order to validate our results we'll use the NLTK package to \n",
     "from nltk import induce_pcfg\n",
     "\n",
-    "print(\"Let's build us some PCFG\")\n",
     "S = Nonterminal('S')\n",
     "grammar = induce_pcfg(S, gram_rules)\n",
     "\n",
     "sent = \"show me the meals on the flight from Phoenix\".split()\n",
-    "\n",
-    "print(\"Using the Viterbi parser to most likely parse for our ambiguous sentence\")\n",
-    "viterbi_parser = nltk.ViterbiParser(grammar)\n",
-    "for tree in viterbi_parser.parse(sent):\n",
-    "    print(tree)\n",
-    "\n",
-    "print(\"\")    \n",
-    "print(\"And now parsing all trees with InsideChart parser...\")\n",
     "inside_parser = nltk.InsideChartParser(grammar)\n",
-    "# viterbi_parser.trace(3)\n",
     "\n",
     "i = 1\n",
     "for tree in inside_parser.parse(sent):\n",
     "    print('Tree number ' + str(i) + \":\")    \n",
     "    print(tree)\n",
-    "#     TreeView(tree)._cframe.print_to_file('parse' + str(i) + '.ps')\n",
     "    i += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using the Viterbi parser to most likely parse for our ambiguous sentence\n",
+      "(S\n",
+      "  (IVP\n",
+      "    (IVerb show)\n",
+      "    (NP (Pronoun me))\n",
+      "    (NP (Det the) (Nominal (Noun meals)))\n",
+      "    (PP\n",
+      "      (Preposition on)\n",
+      "      (NP\n",
+      "        (Det the)\n",
+      "        (Nominal\n",
+      "          (Nominal (Noun flight))\n",
+      "          (PP\n",
+      "            (Preposition from)\n",
+      "            (NP (Proper_Noun Phoenix)))))))) (p=2.19769e-08)\n"
+     ]
+    }
+   ],
    "source": [
-    "# print(grammar)"
+    "print(\"Using the Viterbi parser from NLTK to determine which tree is most likely\")\n",
+    "viterbi_parser = nltk.ViterbiParser(grammar)\n",
+    "for tree in viterbi_parser.parse(sent):\n",
+    "    print(tree)"
    ]
   },
   {
